<resources>
    <string name="app_name">2048</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_8">8</string>
    <string name="android_game">Android Game</string>
    <string name="text_footer">Version 1.2.0\nCopyright © 2021 eazapata\nAllRights Reserved</string>
    <string name="score">Score</string>
    <string name="player_name">Player name:</string>
    <string name="new_game">New game</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="show">Show</string>
    <string name="player_name_hint">Player name</string>
    <string name="time">Time:</string>
    <string name="edit_score">Edit Score</string>
    <string name="_2048">2048</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="play">Play</string>
    <string name="retry">Retry</string>
    <string name="set_the_name_to_search">Set the name</string>
    <string name="search_by">Search by:</string>
    <string name="player_id">Player ID:</string>
    <string name="name">Name</string>
    <string name="sort_by">Sort by:</string>
    <string name="new_game_question">Do you want to start a new game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_score_question">Do yo want to remove this score</string>
    <string name="game_over">GAME OVER</string>
    <string name="sort_score">Sort score:</string>
    <string name="top_score">TOP SCORE</string>
    <string name="set_the_score">Set the score</string>
    <string name="show_all_scores">Show all scores</string>
    <string name="search">Search</string>
    <string name="score_edit">Score:</string>
    <string name="exit">Exit</string>
    <string name="score_cardview">Score:</string>
    <string name="username">Username:</string>
    <string-array name="search_options">
        <item>Name</item>
        <item>Score</item>
    </string-array>
    <string-array name="score_options">
        <item> &#62; </item>
        <item> &#60; </item>
        <item> &#61; </item>
    </string-array>
</resources>