<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="60dp"
    android:forceDarkAllowed="false">

    <TextView
        android:id="@+id/new_game_question"
        android:text="@string/new_game_question"
        android:textSize="@dimen/dialog_text_size"
        android:textColor="@color/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/yes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/yes"
            android:textStyle="bold"
            android:textColor="@color/buttonColor"
            android:backgroundTint="@color/textColor"/>

        <Button
            android:id="@+id/no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/no"
            android:textStyle="bold"
            android:textColor="@color/buttonColor"
            android:backgroundTint="@color/textColor"/>


    </LinearLayout>
</LinearLayout>