<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/background"
    tools:context=".game.MainActivity"
    android:forceDarkAllowed="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="2048"
            android:textSize="@dimen/splash_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/brown"
            android:shadowColor="@android:color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/captura2048"/>
    </LinearLayout>
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:forceDarkAllowed="false"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_above="@+id/grid">

        <ImageView
            android:id="@+id/score"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/score" />

        <ImageView
            android:id="@+id/max_score"
            android:layout_width="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:src="@drawable/topscore"/>

        <TextView
            android:id="@+id/score_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="@dimen/splash_title_size"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/max_score_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="@dimen/splash_title_size"
            android:text="@string/player_name"/>
        <TextView
            android:id="@+id/player_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/text_chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="@dimen/splash_title_size"
            />
        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@android:color/black"
            />
    </GridLayout>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:background="@color/brownGrid"
        android:columnCount="4"
        android:rowCount="4">

        <ImageView
            android:id="@+id/one"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/two"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/three"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/four"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/five"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/six"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/seven"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/eight"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/nine"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ten"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/eleven"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/twelve"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/thirteen"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fourteen"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/fifteen"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/sixteen"
            android:layout_width="@dimen/fieldSize"
            android:layout_height="@dimen/fieldSize"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/marginFields"
            android:background="@color/brown"
            android:gravity="center"
            android:textStyle="bold" />
    </GridLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:backgroundTint="@color/brown" />
        <Button
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:backgroundTint="@color/brown"/>
    </LinearLayout>

</LinearLayout>